--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: 'Ömer Karahan - Makina-e Mühendisi - Mühendislik ve ilgilendiği
 
 '
 baseurl: ''
-url: ''
+url: 'http://omerkarahan.com.tr'
 twitter_username: o3karahan
 github_username: o3karahan
 paginate: 5
