--- a/_data/grabcads.yaml
+++ b/_data/grabcads.yaml
@@ -1,7 +1,7 @@
 
 detail :
     
-    url: "#"
+    url: "https://grabcad.com/omer.karahan-2"
     description: 
     >
         Grabcad , 3 boyutlu tasarım alanında kullanıcılarına etkileşimde bulunma , 
