--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ dogrulamalar :
     google: C-H2ns-d6D9OJnoVYLHMurJIXzQpRTZbQlARfauiriY
     bing: FDE5EC7910E35F632ECCE0A6A49E67B2
     yandex: c422dc6df441bee2
+    analtytics: UA-90927425-1
     
 # Reklamlar.
 reklamlar:
